# numpy-flight

./: .copier-answers.yml  .env  .pre-commit-config.yaml  .rhiza.env  Makefile  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  renovate.json  template.yml
.github/workflows/: book.yml  ci.yml  pre-commit.yml  release.yml  sync.yml
.rhiza/: history  template.yml
book/: _config.yml  genindex.html  objects.inv  search.html  searchindex.js
book/_sources/docs/: index.md
book/docs/: api.html  api.md  index.html  index.md  marimo.md  reports.html  reports.md
book/marimo/: hello.py
marimo/: __init__.html  demo.html
pdoc/: index.html  search.js  tschm.html
pdoc/tschm/: flight.html
pdoc/tschm/flight/: numpy_client.html  numpy_server.html  utils.html
pdoc/tschm/flight/utils/: alter.html
src/flight/: __init__.py  numpy_client.py  numpy_server.py
src/flight/utils/: __init__.py  alter.py
src/np/client/: __init__.py  numpy_client.py
src/np/client/utils/: alter.py
src/np/flight/: numpy_client.py  numpy_server.py
src/tests/: __init__.py  conftest.py  test_client.py  test_docs.py  test_server.py  test_trivial.py
src/tests/test_utils/: __init__.py  test_alter.py
src/tschm/flight/: __init__.py  numpy_server.py
src/tschm/flight/utils/: alter.py
taskfiles/: build.yml
tests/: test_flight.py  tests.mk
tests/coverage/: coverage.info  coverage.json  coverage.xml
tests/html-coverage/: class_index.html  function_index.html  index.html  status.json  z_1415b28e3681835b___init___py.html  z_1415b28e3681835b_numpy_client_py.html  z_1415b28e3681835b_numpy_server_py.html  z_3d24c327041b74c1___init___py.html  z_3d24c327041b74c1_alter_py.html  z_dc44bb707c9901c3___init___py.html  z_dc44bb707c9901c3_alter_py.html  z_f23bddce20a446e2___init___py.html  z_f23bddce20a446e2_numpy_client_py.html  z_f23bddce20a446e2_numpy_server_py.html
tests/html-report/: report.html
tests/test_rhiza/: test_makefile.py
