[project]
name = 'numpy-flight'
version = "0.0.0"
description = "A little client/server for applications driven by numpy"
# Please add authors and correct the email...
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pyarrow>=22.0.0",
]

[project.urls]
repository = "https://github.com/tschm/numpy-client"

[project.optional-dependencies]
dev = [
    "loguru>=0.7.3",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "python-dotenv==1.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/flight"
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B104"]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]
