[project]
name = 'numpy-flight'
version = "0.0.0"
description = "A little client/server for applications driven by numpy"
# Please add authors and correct the email...
authors = [{name='Thomas Schmelzer', email= 'thomas.schmelzer@gmail.com'}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pyarrow>=22.0.0",
]

[project.urls]
repository = "https://github.com/tschm/numpy-client"

[dependency-groups]
dev = [
    "loguru>=0.7.3",
    "marimo>=0.18.4",
    "plotly>=6.5",
    "pandas>=2.3",
    "numpy>=2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flight"]

[tool.hatch.build]
include = [
    "LICENSE",    # Ensure the LICENSE file is included in your package
    "README.md",
    "src/flight"
]

[tool.deptry.package_module_name_map]
numpy = "numpy"
pyarrow = "pyarrow"
loguru = "loguru"
marimo = "marimo"
plotly = "plotly"
pandas = "pandas"

[tool.mypy]
ignore_missing_imports = true
disallow_subclassing_any = false
warn_return_any = false
